# SegiTelep

./: DESKTOP_BUILD.md  README.md  index.html  lint_errors.txt  lint_output.txt  lint_results.json  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build-check.yml
.lovable/: plan.md
docs/: PRODUCTION_BUILD_GUIDE.md  TROUBLESHOOTING.md
scripts/: dev-remote-server.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  mobile_remote.html  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  remote_server.rs
src-tauri/src/assets/: mobile_remote.html
src/components/: DevConsoleToggle.tsx  DeveloperConsole.tsx  ErrorBoundary.tsx  ThemeProvider.tsx
src/components/Layout/: AppHeader.tsx  AppLogo.tsx  AppSidebar.tsx  MainMenuBar.tsx  SecondaryToolbar.tsx  TextEditorLayout.tsx  VisualEditorLayout.tsx  index.ts
src/components/Teleprompter/: AboutDialog.tsx  AudioManager.tsx  ContentEditor.tsx  CountdownSettingsDialog.tsx  ExternalPlayer.tsx  ImageSegmentEditor.tsx  MiniPreview.tsx  PDFPageSelector.tsx  PdfSegmentEditor.tsx  PlaybackControls.tsx  PlayerIndicatorSettingsDialog.tsx  ProjectManager.tsx  ScriptStatisticsDialog.tsx  SegmentList.tsx  SegmentTimerCalculator.tsx  SettingsPanel.tsx  TeleprompterDisplay.tsx  TemplatesDialog.tsx  index.ts
src/components/Teleprompter/AudioManager/: AudioFileItem.tsx  AudioFileList.tsx  AudioManagerDialog.tsx  AudioPreview.tsx  AudioUploader.tsx  index.ts  types.ts  useAudioManager.ts
src/components/Teleprompter/RemoteControl/: ConnectionStatus.tsx  QRCodeDisplay.tsx  RemoteControlDialog.tsx  RemoteControlPanel.tsx  index.ts  types.ts  useRemoteControl.ts
src/components/Teleprompter/VisualEditor/: AudioWaveform.tsx  FullscreenPlayer.tsx  ImageCanvas.tsx  KeyboardShortcutsOverlay.tsx  LeftControlPanel.tsx  PageNavigator.tsx  ProjectListDialog.tsx  SegmentListPanel.tsx  SegmentOverlay.tsx  SelectionToolbar.tsx  TimelineStrip.tsx  VisualEditor.tsx  WelcomeDashboard.tsx  index.ts  useUndoRedo.ts  useVisualEditorState.ts
src/components/Teleprompter/VoiceInput/: TranscriptionDisplay.tsx  index.ts  (+5 more)
src/components/User/: UserProfileDialog.tsx
src/components/ui/: dropdown-menu.tsx  loading.tsx  menubar.tsx  resizable.tsx  sidebar.tsx
src/constants/: index.ts  welcomeContent.ts
src/core/engine/: RenderEngine.ts  ScrollEngine.ts
src/core/projects/: NativeProjectAdapter.ts  ProjectService.ts  WebProjectAdapter.ts  fileImportHandlers.ts  models.ts  types.ts
src/core/storage/: AssetManager.ts  AudioResolver.ts  AudioStorage.ts  NativeStorage.ts  ProjectStorage.ts  UserStorage.ts  VisualProjectStorage.ts  db.ts  index.ts
src/hooks/: useAppViewState.ts  useApplyVisualAudio.ts  useApplyVisualDuration.ts  useAssetUrl.ts  useDeveloperConsole.ts  useDialogController.ts  useKeyboardShortcuts.ts  useRemoteControl.ts  useTeleprompterStartup.ts  useTheme.ts  useVisualProjectSession.ts
src/pages/: HomePage.tsx  Index.original.tsx  Index.tsx
src/store/: playerIndicatorStore.ts  teleprompterStore.ts  userStore.ts
src/store/slices/: editorSlice.ts  playbackSlice.ts  projectSlice.ts  settingsSlice.ts
src/types/: bluetooth.types.ts  remote.types.ts  teleprompter.types.ts  user.types.ts
src/utils/: audioPlaybackCoordinator.ts  countdownUtils.ts  dragDropUtils.ts  exportPDF.ts  externalDisplay.ts  pdfUtils.ts  serializationHelpers.ts  tauriPDFUtils.ts
(+35 files in other folders)
