[package]
name = "segitelep"
version = "1.0.0"
description = "SegiTelep - Professional Segmentation Teleprompter"
authors = ["Ali <gamingcristy19@gmail.com>"]
license = "MIT"
repository = "https://github.com/Burhanali2211/segitelep"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "segitelep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1", features = ["custom-protocol"] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"

# Remote control server dependencies
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
local-ip-address = { version = "0.5" }

# HTTP server for mobile interface
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# QR code generation
qrcode = "0.13"

# Additional utilities
dirs = "5.0"
