[package]
name = "segitelep"
version = "1.0.0"
description = "SegiTelep - Professional Segmentation Teleprompter"
authors = ["Ali <gamingcristy19@gmail.com>"]
license = "MIT"
repository = "https://github.com/Burhanali2211/segitelep"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "segitelep_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Tauri
tauri = { version = "2.1", features = ["custom-protocol"] }
tauri-plugin-log = "2"
tauri-plugin-process = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }

# Cryptography
sha2 = "0.10"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"

# WebSocket (Update to 0.24 for better compatibility - OPTIONAL)
tokio-tungstenite = "0.24"  # Updated from 0.21

# HTTP server
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"

# Networking
local-ip-address = "0.6"  # Updated from 0.5

# QR code
qrcode = "0.14"  # Updated from 0.13

[target.'cfg(target_os = "macos")'.dependencies]
# macOS-specific dependencies if needed